--- a/guitartabs.html
+++ b/guitartabs.html
@@ -584,6 +584,7 @@
                       boxShadow: 'lg'
                     }}
                     transition="all 0.2s"
+                    colorScheme="blue"
                   >
                     Back to Artists
                   </Button>
