--- a/guitartabs.html
+++ b/guitartabs.html
@@ -676,7 +676,7 @@
       };
 
       /**
-       * Displays a box for a single song with options to edit or delete
+       * Displays a box for a single song with edit/delete options in top right corner
        * @param {Object} props - Component properties
        * @param {Object} props.song - Song information
        * @param {Function} props.onDelete - Delete click handler
@@ -687,32 +687,34 @@
         return (
           <Box borderWidth="1px" borderRadius="lg" p={4} cursor="pointer" onClick={() => onClick(song)} _hover={{ bg: "gray.700" }} bg="gray.900">
             <VStack align="center" spacing={2}>
-              {song.isLink ? <LinkIcon size={16} /> : <FileIcon size={16} />}
+              <Box position="relative" w="full">
+                <Center>{song.isLink ? <LinkIcon size={16} /> : <FileIcon size={16} />}</Center>
+                {song.isLink && (
+                  <HStack spacing={2} position="absolute" top="50%" right={0} transform="translateY(-50%)">
+                    <IconButton
+                      aria-label="Edit link"
+                      icon={<EditIcon size={16} />}
+                      size="sm"
+                      colorScheme="blue"
+                      onClick={(e) => {
+                        e.stopPropagation();
+                        onEdit(song);
+                      }}
+                    />
+                    <IconButton
+                      aria-label="Delete link"
+                      icon={<TrashIcon size={16} />}
+                      size="sm"
+                      colorScheme="red"
+                      onClick={(e) => {
+                        e.stopPropagation();
+                        onDelete(song);
+                      }}
+                    />
+                  </HStack>
+                )}
+              </Box>
               <Text textAlign="center">{song.display}</Text>
-              {song.isLink && (
-                <HStack spacing={2} mt={2}>
-                  <IconButton
-                    aria-label="Edit link"
-                    icon={<EditIcon size={16} />}
-                    size="sm"
-                    colorScheme="blue"
-                    onClick={(e) => {
-                      e.stopPropagation();
-                      onEdit(song);
-                    }}
-                  />
-                  <IconButton
-                    aria-label="Delete link"
-                    icon={<TrashIcon size={16} />}
-                    size="sm"
-                    colorScheme="red"
-                    onClick={(e) => {
-                      e.stopPropagation();
-                      onDelete(song);
-                    }}
-                  />
-                </HStack>
-              )}
             </VStack>
           </Box>
         );
