fixed import lines

--- a/guitartabs.html
+++ b/guitartabs.html
@@ -58,8 +58,16 @@
         useDisclosure,
         IconButton,
       } from "@chakra-ui/react";
-
-      import { File as FileIcon, Folder as FolderIcon, Music as MusicIcon, Clock as ClockIcon, Plus as PlusIcon, Trash2 as TrashIcon, Edit as EditIcon, ExternalLink as LinkIcon } from "lucide-react";
+      import {
+        File as FileIcon,
+        Folder as FolderIcon,
+        Music as MusicIcon,
+        Clock as ClockIcon,
+        Plus as PlusIcon,
+        Trash2 as TrashIcon,
+        Edit as EditIcon,
+        ExternalLink as LinkIcon
+      } from "lucide-react";
 
       //==============================================
       // Theme Configuration
