fixed themes without live port

--- a/guitartabs.html
+++ b/guitartabs.html
@@ -119,19 +119,74 @@
       /**
        * Defines the application's dark theme configuration
        */
-      const theme = extendTheme({
+       const theme = extendTheme({
         config: {
           initialColorMode: "dark",
           useSystemColorMode: false,
         },
         styles: {
-          global: (props) => ({
+          global: {
             body: {
               bg: "gray.800",
               color: "white",
-            },
-          }),
+            }
+          }
         },
+        // Add explicit color overrides
+        colors: {
+          blue: {
+            50: "#e3f2fd",
+            100: "#bbdefb",
+            200: "#90caf9",
+            300: "#64b5f6",
+            400: "#42a5f5",
+            500: "#2196f3",  // Default button color
+            600: "#1e88e5",
+            700: "#1976d2",  // Hover state
+            800: "#1565c0",
+            900: "#0d47a1"
+          }
+        },
+        components: {
+          Button: {
+            defaultProps: {
+              colorScheme: 'blue',
+            },
+            variants: {
+              solid: (props) => ({
+                bg: 'blue.500',
+                color: 'white',
+                _hover: {
+                  bg: 'blue.700',
+                }
+              }),
+              ghost: {
+                _hover: {
+                  bg: 'whiteAlpha.200'
+                }
+              }
+            }
+          },
+          IconButton: {
+            defaultProps: {
+              colorScheme: 'blue',
+            },
+            variants: {
+              solid: (props) => ({
+                bg: 'blue.500',
+                color: 'white',
+                _hover: {
+                  bg: 'blue.700',
+                }
+              }),
+              ghost: {
+                _hover: {
+                  bg: 'whiteAlpha.200'
+                }
+              }
+            }
+          }
+        }
       });
 
       //==============================================
